--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="login">
 
       <img src="css/images/user.png" class="user">
-      <h1>ВОЙТИ vb</h1>
+      <h1>ВОЙТИ</h1>
 
       <form action="#">
         <label for="username">Имя пользователя</label>
